--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,6 @@
     <title>Garrett's Website</title>
   </head>
   <body>
-
     <canvas id="bg"></canvas>   
 
     <main>
@@ -56,7 +55,7 @@
       <blockquote>
         <p>If you can't appreciate what you have now, what makes you think you'll appreicate what you don't have? <br>-Garrett Cutler</p>
       </blockquote>
-     
+
       <section class="left">
         <h2>📜 Work History</h2>
 
@@ -82,10 +81,12 @@
         <p>Thanks for watching!</p>
       </blockquote>
 
+      <blockquote>
+        <p>Click <a href="https://cutlerwater-profile.netlify.app/">here </a> to head back to my CutlerwaterITBlog site</a>
+      </blockquote>
+
 
     </main>
     
-    <script type="module" src="script.js"></script>
-
-  </body>
+</body>
 </html>
