--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
         <h2>👩🏽‍🚀 IT certifications</h2>
 
         <p>
-          AWS (Developer, Solutions Architect, Security Specialty, System Operations Administrator, Cloud Practicioner), Azure, Security+CE, ITIL Foundations v3, A+, Server+, MCSE, MCSA, MS developer, etc...
+          Microsoft Power Platform Fundamentals (PL-900), AWS (Developer, Solutions Architect, Security Specialty, System Operations Administrator, Cloud Practicioner), Azure, Security+CE, ITIL Foundations v3, A+, Server+, MCSE, MCSA, MS developer, etc...
         </p>
 
         <h2>🏆 Skills and Accomplishments</h2>
